# traccar-geocoder

./: .gitignore  CMakeLists.txt  README.md  entrypoint.sh
builder/: CMakeLists.txt
builder/src/: build_index.cpp  cache.cpp  cache.h  cell_index.cpp  cell_index.h  continent_filter.cpp  continent_filter.h  geometry.h  interpolation.cpp  interpolation.h  parsed_data.h  relation_collector.h  ring_assembly.cpp  ring_assembly.h  s2_helpers.cpp  s2_helpers.h  string_pool.h  types.h
builder/test/: VALIDATION_REPORT.md  compare_indexes.cpp  test_admin_assembly.sh  test_admin_compare.sh  test_e2e_queries.sh  test_integration.sh  test_ring_assembly.cpp
k8s/: planet-server.yaml
server/: Cargo.toml
server/src/: main.rs
src/: build_index.cpp
